# print-util

./: .gitignore  CODE_SIGNING_POLICY.md  Cargo.toml  EXTENSION_INTEGRATION.md  LICENSE  README.md
.github/workflows/: release.yml  winget.yml
debug-ext/: manifest.json  popup.html  popup.js
installer/: setup.iss
src/: main.rs
winget/: DMS-AI.PrintUtil.installer.yaml  DMS-AI.PrintUtil.locale.en-US.yaml  DMS-AI.PrintUtil.yaml
winget/manifests/d/DMS-AI/PrintUtil/0.1.0/: DMS-AI.PrintUtil.installer.yaml  DMS-AI.PrintUtil.locale.en-US.yaml  DMS-AI.PrintUtil.yaml
winget/manifests/p/print-utilcontributors/print-util/1.0.0/: print-utilcontributors.print-util.installer.yaml  print-utilcontributors.print-util.locale.vn-VN.yaml  print-utilcontributors.print-util.yaml
