[package]
name = "print-util"
version = "0.1.0"
edition = "2021"
description = "Silent local print server – accepts a PDF via HTTP multipart and prints without any dialog"

[[bin]]
name = "print-util"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["multipart"] }
tokio           = { version = "1",   features = ["full"] }
serde_json      = "1"
anyhow          = "1"
tracing         = "0.1"
tracing-subscriber = "0.3"
uuid            = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
libloading = "0.8"
