[package]
name = "print-util"
version = "0.2.4"
edition = "2021"
description = "Silent local print server – accepts a PDF via HTTP multipart and prints without any dialog"

[[bin]]
name = "print-util"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["multipart"] }
tokio           = { version = "1",   features = ["full"] }
serde_json      = "1"
anyhow          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"
uuid            = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Graphics_Printing",
] }
libloading     = "0.8"
windows-service = "0.7"
